--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ canvas {
     z-index: -1;
     width: 100%;
     height: 100%;
-    filter: blur(4px) brightness(0.5);
+    filter: blur(0px) brightness(0.5);
 }
 
 .image_container {
@@ -46,10 +46,19 @@ canvas {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 550px;
+    width: 500px;
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
+
+}
+
+@media only screen and (max-width:600px) {
+    .container {
+        width: 100%;
+        padding: 0;
+    }
+
 
 }
 
@@ -99,7 +108,6 @@ canvas {
     color: #fff;
     display: inline-block;
     margin: 20px;
-    width: 450px;
     text-align: center;
 }
 
