--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
     height: 100%;
 }
 
+.button_container a {
+    text-decoration: none;
+}
+
 canvas {
     position: fixed;
     top: 0;
