--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ canvas {
     z-index: -1;
     width: 100%;
     height: 100%;
-    filter: blur(0px) brightness(0.5);
+    filter: blur(0px) brightness(0.4);
 }
 
 .image_container {
@@ -50,7 +50,7 @@ canvas {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 500px;
+    /* width: 500px; */
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
@@ -71,12 +71,13 @@ canvas {
     text-align: center;
     border-radius: 5px;
     position: relative;
-    background: rgba(133, 133, 133, 0.26);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 35px;
+    background: #1c1c1cab;
+    box-shadow: 5px 5px 10px #181818,
+        -5px -5px 10px #202020;
     backdrop-filter: blur(2.2px);
     -webkit-backdrop-filter: blur(2.2px);
-    border: 1px solid rgba(118, 118, 118, 0.25);
+    /* border: 1px solid rgba(118, 118, 118, 0.25); */
 }
 
 .name {
@@ -115,6 +116,38 @@ canvas {
     text-align: center;
 }
 
+.tri-button-container {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    font-size: 12px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.tri-button-container:nth-child(1) {
+    background-color: #1c1c1c;
+}
+
+.tri-button-container>label {
+    margin-left: -8px;
+    cursor: pointer;
+}
+
+.tri-state-toggle {
+    display: inline-block;
+    background: #161616;
+    max-width: auto;
+    border-radius: 20px;
+    margin: 10px;
+}
+
+.tri-button-container>.tri-button {
+    appearance: none;
+}
+
 .button_container {
     display: flex;
     justify-content: center;
@@ -151,11 +184,14 @@ canvas {
     align-items: center;
     margin-top: 10px;
     margin: 10px;
-    background: rgba(30, 30, 30, 0.5);
+    border-radius: 35px;
+    background: #00000044;
+    box-shadow: 5px 5px 10px #161616,
+        -5px -5px 10px #1e1e1e;
     display: inline-flex;
-    width: 350px;
+    /* width: 350px; */
     border-radius: 5px;
-    padding: 8px;
+    padding: 8px 16px;
     gap: 50px
 }
 
