--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ canvas {
 .image_container {
     overflow: hidden;
     transform: translateY(-60%);
-    margin-bottom: -10%;
+    margin-bottom: 0;
 }
 
 .image_container img {
@@ -86,7 +86,7 @@ canvas {
     font-weight: 800;
     color: #fff;
     display: inline-block;
-    margin: 10px;
+    margin: 2px;
 }
 
 .tag_line {
