--- a/style.css
+++ b/style.css
@@ -30,13 +30,21 @@ canvas {
     z-index: -1;
     width: 100%;
     height: 100%;
-    filter: blur(0px) brightness(0.4);
+    /* filter: blur(0px) brightness(0.4); */
 }
 
 .image_container {
     overflow: hidden;
-    transform: translateY(-60%);
     margin-bottom: 0;
+}
+
+/* for desktop only */
+
+@media only screen and (min-width:600px) {
+    .image_container {
+        transform: translateY(-60%);
+    }
+
 }
 
 .image_container img {
@@ -60,7 +68,7 @@ canvas {
 @media only screen and (max-width:600px) {
     .container {
         width: 100%;
-        padding: 0;
+        height: 100%;
     }
 
 
@@ -71,11 +79,27 @@ canvas {
     text-align: center;
     border-radius: 5px;
     position: relative;
-    border-radius: 35px;
-    background: rgba(0,0,0,0.5);
+    border-radius: 25px;
+    background: rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0px 0px 20px 1px rgba(5, 5, 5, 0.63);
+
     backdrop-filter: blur(22px);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     /* border: 1px solid rgba(118, 118, 118, 0.25); */
 }
+
+@media screen and (max-width: 600px) {
+    .box {
+        backdrop-filter: blur(7px);
+        background: rgba(0, 0, 0, 0.2);
+        border-radius: 0;
+    }
+}
+
+
 
 .name {
     font-size: 1.7rem;
@@ -83,7 +107,7 @@ canvas {
     font-weight: 800;
     color: #fff;
     display: inline-block;
-    margin: 2px;
+    /* margin: 2px; */
 }
 
 .tag_line {
@@ -91,7 +115,7 @@ canvas {
     font-weight: 700;
     color: #fff;
     display: inline-block;
-    margin: 10px;
+    /* margin: 10px; */
 }
 
 .profession {
@@ -100,7 +124,7 @@ canvas {
     letter-spacing: 1px;
     color: #fff;
     display: inline-block;
-    margin: 20px;
+    /* margin: 20px; */
 }
 
 .paragraph {
@@ -109,7 +133,7 @@ canvas {
     letter-spacing: 1px;
     color: #fff;
     display: inline-block;
-    margin: 20px;
+    margin: 1rem;
     text-align: center;
 }
 
@@ -117,7 +141,7 @@ canvas {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin: 10px;
+    /* margin: 10px; */
     padding: 10px;
     font-size: 12px;
     border-radius: 20px;
@@ -138,7 +162,7 @@ canvas {
     background: #161616;
     max-width: auto;
     border-radius: 20px;
-    margin: 10px;
+    /* margin: 10px; */
 }
 
 .tri-button-container>.tri-button {
@@ -177,18 +201,18 @@ canvas {
 
 .socials_container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 10px;
     margin: 10px;
     border-radius: 35px;
     background: #00000044;
+    box-shadow: inset 0px 0px 8px 1px rgba(29, 29, 29, 0.63);
 
     display: inline-flex;
     /* width: 350px; */
     border-radius: 5px;
     padding: 8px 16px;
-    gap: 50px
 }
 
 .socials_container a {
